--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "1.4.7",
     "express": "5.1.0",
     "jsonwebtoken": "9.0.2",
+    "mailtrap": "^4.3.0",
     "pg": "8.16.3",
     "winston": "3.17.0"
   },
